feat: new endpoint for diet-order cost, swagger updated
