# backend/swagger/swagger.json
@@ -94,6 +94,35 @@
         ]
       }
     },
+    "/diets/kcal-options": {
+      "get": {
+        "tags": [
+          "diet"
+        ],
+        "summary": "",
+        "description": "",
+        "operationId": "getKcalOptions",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/KcalOption"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/diets?dietId=1": {
       "get": {
         "tags": [
@@ -211,7 +240,7 @@
           "diet-order"
         ],
         "summary": "",
-        "description": "",
+        "description": "Returns diet orders for logged in user",
         "operationId": "getDietOrders",
         "produces": [
           "application/json"
@@ -225,6 +254,71 @@
                 "$ref": "#/definitions/DietOrder"
               }
             }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/diet-orders/all": {
+      "get": {
+        "tags": [
+          "diet-order"
+        ],
+        "summary": "",
+        "description": "Returns diet orders forall users. Only for administators",
+        "operationId": "getAllDietOrders",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/DietOrder"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/diet-orders/cost": {
+      "post": {
+        "tags": [
+          "diet-order"
+        ],
+        "summary": "Count cost of a diet-order",
+        "operationId": "getDietOrderCost",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Diet order params",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/DietOrderCost"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
           }
         },
         "security": [
@@ -786,9 +880,6 @@
         },
         "dailyCost": {
           "type": "integer"
-        },
-        "photoUrl": {
-          "type": "string"
         }
       }
     },
@@ -796,13 +887,21 @@
       "type": "object",
       "properties": {
         "name": {
-          "type": "string"
+          "type": "integer"
         },
         "dailyCost": {
           "type": "integer"
+        }
+      }
+    },
+    "KcalOption": {
+      "type": "object",
+      "properties": {
+        "value": {
+          "type": "number"
         },
-        "photoUrl": {
-          "type": "string"
+        "extraCost": {
+          "type": "number"
         }
       }
     },
@@ -876,6 +975,12 @@
             "type": "string"
           }
         },
+        "kcal": {
+          "type": "number"
+        },
+        "cost": {
+          "type": "number"
+        },
         "status": {
           "$ref": "#/definitions/DietOrderStatus"
         }
@@ -893,8 +998,28 @@
             "type": "string"
           }
         },
+        "kcal": {
+          "type": "number"
+        },
         "status": {
           "$ref": "#/definitions/DietOrderStatus"
+        }
+      }
+    },
+    "DietOrderCost": {
+      "type": "object",
+      "properties": {
+        "dietId": {
+          "type": "integer"
+        },
+        "dates": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "kcal": {
+          "type": "number"
         }
       }
     },
@@ -1075,8 +1200,7 @@
           "type": "string",
           "enum": [
             "admin",
-            "user",
-            "dietitian"
+            "user"
           ]
         },
         "phone": {
